docs/api/qiskit/0.28/qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.mdx
---
title: AmplitudeEstimationAlgorithmResult (v0.28)
description: API reference for qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult in qiskit v0.28
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult
---

<span id="qiskit-aqua-algorithms-amplitudeestimationalgorithmresult" />

# qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult

<Class id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/aqua/algorithms/amplitude_estimators/ae_algorithm.py" signature="AmplitudeEstimationAlgorithmResult(a_dict=None)" modifiers="class">
  AmplitudeEstimationAlgorithm Result.

  ### \_\_init\_\_

  <Function id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.__init__" signature="__init__(a_dict=None)">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                                                      |                                                                                                                                                                                                                      |
  | -------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.__init__ "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.__init__")(\[a\_dict])   | Initialize self.                                                                                                                                                                                                     |
  | [`clear`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.clear "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.clear")()                      | **rtype**`None`                                                                                                                                                                                                      |
  | [`combine`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.combine "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.combine")(result)          | Any property from the argument that exists in the receiver is updated.                                                                                                                                               |
  | `copy`()                                                                                                                                                             |                                                                                                                                                                                                                      |
  | [`from_dict`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.from_dict "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.from_dict")(a\_dict)   | create new object from a dictionary                                                                                                                                                                                  |
  | `fromkeys`(iterable\[, value])                                                                                                                                       |                                                                                                                                                                                                                      |
  | [`get`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.get "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.get")(k\[,d])                      |                                                                                                                                                                                                                      |
  | [`items`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.items "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.items")()                      |                                                                                                                                                                                                                      |
  | [`keys`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.keys "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.keys")()                         |                                                                                                                                                                                                                      |
  | [`pop`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.pop "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.pop")(key\[, default])             | If key is not found, d is returned if given, otherwise KeyError is raised.                                                                                                                                           |
  | [`popitem`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.popitem "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.popitem")()                | as a 2-tuple; but raise KeyError if D is empty.                                                                                                                                                                      |
  | [`setdefault`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.setdefault "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.setdefault")(k\[,d]) |                                                                                                                                                                                                                      |
  | [`update`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.update "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.update")(\*args, \*\*kwargs) | If E present and has a .keys() method, does: for k in E: D\[k] = E\[k] If E present and lacks .keys() method, does: for (k, v) in E: D\[k] = v In either case, this is followed by: for k, v in F.items(): D\[k] = v |
  | [`values`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.values "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.values")()                   |                                                                                                                                                                                                                      |

  ## Attributes

  |                                                                                                                                                                                         |                             |
  | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------- |
  | [`a_estimation`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.a_estimation "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.a_estimation")                      | return a\_estimation        |
  | [`confidence_interval`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.confidence_interval "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.confidence_interval") | return confidence\_interval |
  | [`estimation`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.estimation "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.estimation")                            | return estimation           |
  | [`num_oracle_queries`](#qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.num_oracle_queries "qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.num_oracle_queries")    | return num\_oracle\_queries |

  ### a\_estimation

  <Attribute id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.a_estimation">
    return a\_estimation

    **Return type**

    `float`
  </Attribute>

  ### clear

  <Function id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.clear" signature="clear()">
    **Return type**

    `None`
  </Function>

  ### combine

  <Function id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.combine" signature="combine(result)">
    Any property from the argument that exists in the receiver is updated. :type result: `AlgorithmResult` :param result: Argument result with properties to be set.

    **Raises**

    **TypeError** – Argument is None

    **Return type**

    `None`
  </Function>

  ### confidence\_interval

  <Attribute id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.confidence_interval">
    return confidence\_interval

    **Return type**

    `List`\[`float`]
  </Attribute>

  ### estimation

  <Attribute id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.estimation">
    return estimation

    **Return type**

    `float`
  </Attribute>

  ### from\_dict

  <Function id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.from_dict" signature="from_dict(a_dict)" modifiers="static">
    create new object from a dictionary

    **Return type**

    `AmplitudeEstimationAlgorithmResult`
  </Function>

  ### get

  <Function id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.get" signature="get(k[, d]) → D[k] if k in D, else d. d defaults to None." />

  ### items

  <Function id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.items" signature="items() → a set-like object providing a view on D’s items" />

  ### keys

  <Function id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.keys" signature="keys() → a set-like object providing a view on D’s keys" />

  ### num\_oracle\_queries

  <Attribute id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.num_oracle_queries">
    return num\_oracle\_queries

    **Return type**

    `int`
  </Attribute>

  ### pop

  <Function id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.pop" signature="pop(key, default=None)">
    If key is not found, d is returned if given, otherwise KeyError is raised.

    **Return type**

    `object`
  </Function>

  ### popitem

  <Function id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.popitem" signature="popitem()">
    as a 2-tuple; but raise KeyError if D is empty.

    **Return type**

    `Tuple`\[`object`, `object`]
  </Function>

  ### setdefault

  <Function id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.setdefault" signature="setdefault(k[, d]) → D.get(k,d), also set D[k]=d if k not in D" />

  ### update

  <Function id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.update" signature="update(*args, **kwargs)">
    If E present and has a .keys() method, does: for k in E: D\[k] = E\[k] If E present and lacks .keys() method, does: for (k, v) in E: D\[k] = v In either case, this is followed by: for k, v in F.items(): D\[k] = v

    **Return type**

    `None`
  </Function>

  ### values

  <Function id="qiskit.aqua.algorithms.AmplitudeEstimationAlgorithmResult.values" signature="values() → an object providing a view on D’s values" />
</Class>

